--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,5 +73,8 @@ export(
 )
 export(PACKAGE hash23)
 
-enable_testing()
-add_subdirectory(tests)
+option(BUILD_TESTING "..." ON)
+if (BUILD_TESTING)
+    enable_testing()
+    add_subdirectory(tests)
+endif ()
