--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.28)
 
-project(hash23 LANGUAGES C CXX VERSION 1.1)
+project(hash23 LANGUAGES C CXX VERSION 1.2)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -17,11 +17,20 @@ add_library(
 )
 add_library(hash23::hash23 ALIAS hash23)
 
-find_package(bigint23 REQUIRED)
+# download CPM.cmake
+file(
+        DOWNLOAD
+        https://github.com/cpm-cmake/CPM.cmake/releases/download/v0.40.8/CPM.cmake
+        ${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake
+        EXPECTED_HASH SHA256=78ba32abdf798bc616bab7c73aac32a17bbd7b06ad9e26a6add69de8f3ae4791
+)
+include(${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake)
+
+CPMAddPackage("gh:rwindegger/bigint23#v2.2")
 
 target_link_libraries(hash23
         INTERFACE
-        bigint23::bigint23
+        bigint::bigint
 )
 
 target_compile_features(hash23 INTERFACE cxx_std_23)
