Update bigint package reference to bigint23 in CMake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ file(
 include(${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake)
 
 CPMAddPackage(
-        NAME bigint
+        NAME bigint23
         URI "gh:rwindegger/bigint23#v2.2"
         OPTIONS "BUILD_TESTING OFF"
 )
